# sp1-eth-binary-tree

./: Cargo.toml  README.md  rust-toolchain
program/: Cargo.toml
program/src/: main.rs
script/: Cargo.toml
